--- a/index.html
+++ b/index.html
@@ -1,19 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web dev protfolio</title>  
-</head>
-<body>
-    <header>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="protfolio.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <title>Web dev protfolio</title>
+  </head>
+  <body class="open-sans-name">
+    <header class="header content-bg">
+      <nav>
+        <h3 class="nav-title">
+          S<span class="r">o</span>w<span class="r">r</span>ov
+        </h3>
+        <ul>
+          <li><a class="dark-2" href="">Portfolio</a></li>
+          <li><a class="dark-2" href="">Blog</a></li>
+          <li>
+            <a href=""><button class="btn">Hire me</button></a>
+          </li>
+        </ul>
+      </nav>
+      <div class="first-content">
+        <div class="introduction-content">
+          <h3 class="dark-2 gridding">Hi, I am</h3>
+          <h1 class="my-name">Sowrov Nath</h1>
+          <p class="discription">
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <button class="btn">
+            <i class="bi bi-download icon"></i>Download me
+          </button>
+          <button class="btn contact-btn">Hire me</button>
+        </div>
+        <img src="images/hardy.png" width="584" alt="" />
+      </div>
     </header>
     <main>
-
+      <div class="section1">
+        <div class="about">
+          <h3 class="content-title">About me</h3>
+          <p class="content-write">
+            I, m a designer & developer with a passion for web design. I enjoy
+            developing simple, clean and slick websites that provide real value
+            to the end user. Thousands of clients have procured exceptional
+            resulfs while working with me. Delivering work within time and
+            budget which meets clients requirements in our mata.
+          </p>
+          <div class="about-items">
+            <div class="about-item">
+              <h5 class="about-title">Name</h5>
+              <p class="about-description">Sowrov</p>
+            </div>
+            <div class="about-item">
+              <h5 class="about-title">Email</h5>
+              <p class="about-description">siuw@gmail.com</p>
+            </div>
+            <div class="about-item">
+              <h5 class="about-title">Date of birth</h5>
+              <p class="about-description">December 1,2006</p>
+            </div>
+            <div class="about-item">
+              <h5 class="about-title">From</h5>
+              <p class="about-description">Chattogram,BD</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="section2">
+        <h3 class="content-title2">What I do</h3>
+        <p class="content-write">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+      </div>
     </main>
-    <footer>
-        
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
