--- a/index.html
+++ b/index.html
@@ -81,6 +81,28 @@
         <h3 class="content-title2">What I do</h3>
         <p class="content-write">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
       </div>
+      <div class="section3">
+        <div class="skill">
+          <img src="images/icons/js.png" alt="">
+          <h5 class="about-title skill-title">Vanilla JavaScript</h5>
+          <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill">
+          <img src="images/icons/react.png" alt="">
+          <h5 class="about-title skill-title">React</h5>
+          <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill">
+          <img src="images/icons/nodejs.png" alt="">
+          <h5 class="about-title skill-title">Node.js</h5>
+          <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill">
+          <img src="images/icons/mongo.png" alt="">
+          <h5 class="about-title skill-title">MongoDB</h5>
+          <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+      </div>
     </main>
     <footer></footer>
   </body>
