--- a/index.html
+++ b/index.html
@@ -103,6 +103,58 @@
           <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
         </div>
       </div>
+      <div class="section4">
+        <p class="content-title2 section4-title">A summary of My Resume</p>
+        
+      </div>
+      <div class="section5">
+        <div class="education">
+          <p class="resume-title">My Education</p>
+          <div class="edu-qualification">
+            <p class="degree">Master in Computer Engineering</p>
+            <p class="collage">Harvard University / 2015 - 2017</p>
+            <p class="skill-description">List skill/technologies here. You can change the icon above 
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <hr class="hr">
+          </div>
+          <div class="edu-qualification">
+            <p class="degree">Master in Computer Engineering</p>
+            <p class="collage">Harvard University / 2015 - 2017</p>
+            <p class="skill-description">List skill/technologies here. You can change the icon above 
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <hr class="hr">
+          </div>
+          <div class="edu-qualification">
+            <p class="degree">Master in Computer Engineering</p>
+            <p class="collage">Harvard University / 2015 - 2017</p>
+            <p class="skill-description">List skill/technologies here. You can change the icon above 
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+        </div>
+        <div class="education">
+          <p class="resume-title">My Education</p>
+          <div class="work-ex">
+            <p class="degree">Sr. Font End Developer</p>
+            <p class="collage">Apple Inc / 2020 - Current</p>
+            <p class="skill-description">List skill/technologies here. You can change the icon above 
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <hr class="hr">
+          </div>
+          <div class="work-ex">
+            <p class="degree">Jr. Font End Developer</p>
+            <p class="collage">Dribbble Inc / 2018 - 2022</p>
+            <p class="skill-description">List skill/technologies here. You can change the icon above 
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <hr class="hr">
+          </div>
+          <div class="work-ex">
+            <p class="degree">HTML Developer</p>
+            <p class="collage">Adobe Inc / 2017 - 2018</p>
+            <p class="skill-description">List skill/technologies here. You can change the icon above 
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+        </div>
+      </div>
     </main>
     <footer></footer>
   </body>
