--- a/index.html
+++ b/index.html
@@ -155,7 +155,33 @@
           </div>
         </div>
       </div>
-    </main>
-    <footer></footer>
+      <div class="section6">
+        
+        <button class="btn btn2">
+          <i class="bi bi-download icon"></i>Download me
+        </button>
+      </div>
+    <footer>
+      <div class="last-content">
+        <div class="contact">
+          <p class="f-title">Lets Connect</p>
+          <p class="f-content">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+          <div class="picture">
+            <img src="images/icons/insta.png" alt="">
+            <img src="images/icons/facebook.png" alt="">
+            <img src="images/icons/twitter.png" alt="">
+          </div>
+        </div>
+        <div class="contact">
+          <p class="f-title">Let’s Message me</p>
+          <form action="">
+            <label for="name"><input type="text" id="name" placeholder="Your name"></label>
+            <label for="Email"><input type="text" id="Email" placeholder="Your email"></label>
+            <textarea name="" id="" placeholder="Massage me" ></textarea>
+          </form>
+          <a href=""><button class="btn">Submit</button></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
